fix(nav): resolve missing hamburger icon and prevent greedy-nav from squishing the title into multiple lines

--- a/_sass/include/_utilities.scss
+++ b/_sass/include/_utilities.scss
@@ -317,6 +317,9 @@ body:hover .visually-hidden button {
    Navicons
    ========================================================================== */
 
+$navicon-width: 28px;
+$navicon-height: 4px;
+
 .navicon {
   position: relative;
   display: inline-block;
