--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -209,10 +209,10 @@
     li {
       display: table-cell;
       vertical-align: middle;
+      white-space: nowrap;
 
       &:first-child {
         font-weight: bold;
-        text-wrap: wrap;
 
         a {
           margin-left: 0;
